# ABCD

./: .gitignore  candles df empty.txt  data.csv  empty_symbols.txt  rules.txt  test.py  to_do_list.txt
client/: data.csv  package-lock.json  package.json
client/docs/: global.html  index.html  jsdocs.js.html
client/src/: App.js  Dropdown.js  FilterDropDown.js  InfiniteTable.js  MainTools.js  PatternTable.js  PeformanceTable.js  RecentPatterns.js  Section.js  Trades.js  WLExpand.js  WatchList.js  backend_routes.js  candle_chart.js  candle_chart_tools.js  draw_.js  filter.js  filter_patterns.js  grid-with-sticky-cells.jsx  jsdocs.js  new.css  note.js  resize.js  table.js  tools.js  utilities.js
client/src/candle_chart/: candle_chart.js  chart_main.js  draw_.js  resize.js  utilities.js
client/src/docs/: global.html  index.html  tools.js.html
client/src/docs/styles/: jsdoc-default.css
client/src/filter/: pattern_filtering.js
engine/: data.csv  main.py  storage.py
rust_sr/: Cargo.toml  sr.py
rust_sr/a/src/: main.rs
rust_sr/abcd/: Cargo.toml
rust_sr/abcd/src/: abcd.rs  lib.rs  main.rs
rust_sr/abcd/src/models/: abcd_type.rs  candle.rs  database.rs  market.rs  mod.rs  pattern_a.rs  pattern_ab.rs  pattern_abc.rs  pattern_abcd.rs  pattern_x.rs  pivot.rs  pivot_type.rs  reversal_type.rs  trade.rs  xabcd_csv.rs
rust_sr/all_time_low/: Cargo.toml
rust_sr/all_time_low/src/: main.rs
rust_sr/alpha_vantage/: Cargo.toml  Dockerfile
rust_sr/alpha_vantage/src/: lib.rs  main.rs
rust_sr/alpha_vantage/src/models/: alpha_vantage.rs  candle.rs  listing_status.rs  mod.rs
rust_sr/old_abcd/: Cargo.toml
rust_sr/old_abcd/src/: abcd_.rs  db.rs  lib.rs  main.rs
rust_sr/server/: Cargo.toml  dockerfile  patterns_all.csv
rust_sr/server/src/: main.rs  pattern.rs  peformance.rs  utils.rs
rust_sr/server/src/models/: candles.rs  database.rs  mod.rs
rust_sr/src/: main.rs
rust_sr/tools/: Cargo.toml
rust_sr/tools/src/: alphavantage.rs  db_utils.rs  lib.rs
server/: server.py  storage.py
xgboost/: test_AB.py  xgboost_AB.py
