[package]
name = "alpha_vantage"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }