[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
actix-web = "4.0" # Use your appropriate version
actix-cors = "0.6"
chrono = "0.4"