[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

csv = "1.1"
actix-web = "4.0" # Use your appropriate version
actix-cors = "0.6"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
mysql = { version = "27.0", features = ["native-tls"] }
